import "FailedDocument.proto";

option java_outer_classname="ReplaceDocumentsResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message ReplaceDocumentsResponse 
{
    repeated FailedDocument failedDocuments = 1; 
}
